Fixed ip white list issue

--- a/admin/templates/common/footer.html
+++ b/admin/templates/common/footer.html
@@ -4,7 +4,7 @@
 
       <footer>
         <p class="pull-right"><a href="#"><i class="icon-arrow-up"></i></a></p>
-        <p>&copy; {{ sitename }} {{ "now"|date("Y") }}</p>
+        <p>&copy; {{ cms.name }} {{ "now"|date("Y") }} | <a href="#" class="credits">Credits</a></p>
       </footer>
 
       <div class="modal fade hide" id="credits">
