--- a/admin/templates/common/module-edit.html
+++ b/admin/templates/common/module-edit.html
@@ -62,6 +62,11 @@
 
           updateDatepickers();
 
+          $.each($("select[multiple]"), function () {
+            var label = $(this).parent().parent().find('label').text();
+            SelectFilter.init(this.id, label);
+          });
+
           var regex = /\[\d+\](?!.*\[\d+\])/i;
           var regex2 = /\d+(?!.*\d+)/i;
 
@@ -521,7 +526,7 @@
                   <input type="hidden" name="{{ key }}">
                   <select{% if not field.one %} multiple="multiple"{% endif %} name="{{ key }}[]" id="{{ key }}">
                   {% if field.one %}
-                    <option value="">-- Select --</option>
+                    <option value="0">-- Select --</option>
                   {% endif %}
                   {% for fkfield in field.fields %}
                     <option value="{{ fkfield.id }}" {% if fkfield.selected == true %}selected{% endif %}>{{ fkfield.id }}: {{ fkfield.selecttitle }}</option>
