--- a/admin/templates/common/module-edit.html
+++ b/admin/templates/common/module-edit.html
@@ -16,11 +16,17 @@
 
           $("form").validate({
             errorPlacement: function(error, element) {
-              $(element).parent('div').parent('div').addClass('error');
-              $(element).parent('label').parent('div').parent('div').addClass('error');
+              $(element).closest('.control-group').addClass('error');
+
+              $(element).closest('.control-group').find('.filter-search').css('border-color', '#cccccc');
+              $(element).closest('.control-group').find('.options').css('border-color', '#e5e5e5').css('color', '#555555');
+
               error.insertAfter(element.parent('div'));
               error.insertAfter(element.parent('label').parent('div'));
+              error.insertAfter(element.parent('div').parent('div').parent('div'));
+
               error.css('margin', '10px 0px 0px 160px');
+              error.css('clear', 'both');
             },
             success: function(element){
               $(element).parent('div').removeClass('error');
@@ -145,14 +151,18 @@
         });
         </script>
         <div class="span9">
-          <div class="page-header">
-            <h1>
-              Edit
-              <small>{{ module|title }}</small>
-            </h1>
-          </div>
 
           <form class="form-horizontal" method="post" enctype="multipart/form-data">
+
+            <div class="page-header">
+              <a class="btn btn-small pull-right" href="/admin/{{ module }}">Cancel</a>
+              <button type="submit" name="save" class="btn btn-primary btn-small pull-right" style="margin-right:5px;"><i class="icon-pencil icon-white"></i> Save</button>
+              <h1>
+                Edit
+                <small>{{ module|title }}</small>
+              </h1>
+            </div>
+
             <fieldset>
             {% for key, field in fields %}
             {% if field.type != 'foreignkey' and key != 'id' %}
@@ -521,12 +531,12 @@
                   <a href="/admin/{{ key|slice(6, 100)|lower }}" class="btn btn-mini btn-primary" target="_blank"><i class="icon-plus-sign icon-white"></i> Add</a> 
               </div>
               <div class="control-group">
-                <label class="control-label" for="{{ key }}">{{ field.label|title }}</label>
+                <label class="control-label" for="{{ key }}">{% if field.required %}<span rel="tooltip">{% endif %}{{ field.label|capitalize }}{% if field.required %}</span>{% endif %}</label>
                 <div class="controls">
                   <input type="hidden" name="{{ key }}">
-                  <select{% if not field.one %} multiple="multiple"{% endif %} name="{{ key }}[]" id="{{ key }}">
+                  <select{% if not field.one %} multiple="multiple"{% endif %} name="{{ key }}[]" id="{{ key }}"{% if field.required %} class="required"{% endif %}>
                   {% if field.one %}
-                    <option value="0">-- Select --</option>
+                    <option value="">-- Select --</option>
                   {% endif %}
                   {% for fkfield in field.fields %}
                     <option value="{{ fkfield.id }}" {% if fkfield.selected == true %}selected{% endif %}>{{ fkfield.id }}: {{ fkfield.selecttitle }}</option>
