--- a/admin/templates/common/nav.html
+++ b/admin/templates/common/nav.html
@@ -9,7 +9,7 @@
           <a class="brand" href="/admin">{{ sitename }}</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="/admin">cPanel</a></li>
+              <li><a href="/admin">Dashboard</a></li>
               <li><a href="/admin/settings">Settings</a></li>
             </ul>
             <ul class="nav pull-right">
