Slow scroll to top added to admin

--- a/admin/templates/common/footer.html
+++ b/admin/templates/common/footer.html
@@ -3,7 +3,7 @@
       <hr>
 
       <footer>
-        <p class="pull-right"><a href="#"><i class="icon-arrow-up"></i></a></p>
+        <p class="pull-right"><a href="#top"><i class="icon-arrow-up"></i></a></p>
         <p>&copy; {{ cms.name }} {{ "now"|date("Y") }} | <a href="#" class="credits">Credits</a></p>
       </footer>
 
