--- a/admin/templates/common/header.html
+++ b/admin/templates/common/header.html
@@ -127,6 +127,11 @@
         }, 1500);
         return false;
       });
+
+      $('a[href=#top]').click(function(){
+        $('html, body').animate({scrollTop:0}, 'slow');
+        return false;
+      });
     });
     </script>
 
