--- a/admin/templates/common/sidenav.html
+++ b/admin/templates/common/sidenav.html
@@ -1,19 +1,30 @@
 
         <div class="span3">
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              {% for key, menugroup in menu %}
-              <li class="nav-header">{{ key }}</li>
-              <!--<li class="divider"></li>-->
-              {% for key, item in menugroup %}
-              <li class="{{ key }}">
-                  <a href="/admin/{{ key }}">
-                      <i class="icon-list"></i>
-                      {{ item|raw }}
-                  </a>
-              </li>
-              {% endfor %}
-              {% endfor %}
-            </ul>
-          </div><!--/.well -->
+
+          <div class="accordion" id="accordion">
+            {% for key, menugroup in menu %}
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle{% if loop.first %} active{% endif %}" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ loop.index }}">
+                  <i class="icon-circle-arrow-{% if loop.first %}right{% else %}down{% endif %} pull-right"></i>{{ key }}
+                </a>
+              </div>
+              <div id="collapse{{ loop.index }}" class="accordion-body collapse{% if loop.first %} in{% endif %}">
+                <div class="accordion-inner">
+                  <ul class="nav nav-list">
+                    {% for key, item in menugroup %}
+                    <li class="{{ key }}">
+                      <a href="/admin/{{ key }}">
+                        <i class="icon-list"></i>
+                        {{ item|raw }}
+                      </a>
+                    </li>
+                    {% endfor %}
+                  </ul>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+
         </div><!--/span-->
